--- a/css/groups.css
+++ b/css/groups.css
@@ -95,3 +95,27 @@
   .sidebar nav ul li a:hover {
     background-color: #ddd; /* Example hover style */
   }
+
+  .figcaption {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--white);
+    text-shadow: -1px -1px 0px rgba(0,0,0,0.8),
+                 1px -1px 0px rgba(0,0,0,0.8),
+                 -1px 1px 0px rgba(0,0,0,0.8),
+                 1px 1px 0px rgba(0,0,0,0.8);
+  }
+  .figcaption h1 {
+    font-size: 7.2rem;
+    font-weight: 400;
+    line-height: 1.1;
+    margin-bottom: 0;
+  }
+  .figcaption p {
+    font-size: 3.6rem;
+    font-weight: 700;
+    margin-top: 1.5rem;
+  }
