--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 :root {
-    --dark: #20535d;
-    --midark: #515153;
-    --dim: #494848;
-    --color: #e5990c;
-    --mid: #c7b6d4;
-    --light: #C9C3C3;
-    --milight: #E5E1E1;
-    --white: #FAF3F3;
-    --std: all 250ms ease-in-out;
-    --long: all 500ms ease-in-out;
-  }
+  --dark: #6b5b52;
+  --midark: #7b6c4f;
+  --dim: #e5c8a4;
+  --color: #265c31;
+  --mid: #5d6f5d;
+  --light: #f9e8d1;
+  --milight: #E5E1E1;
+  --white: #FAF3F3;
+  --std: all 250ms ease-in-out;
+  --long: all 500ms ease-in-out;
+}
   
   body {
     color: var(--mid);
