--- a/css/groups.css
+++ b/css/groups.css
@@ -1,15 +1,15 @@
 :root {
-    --dark: #6b5b52;
-    --midark: #7b6c4f;
-    --dim: #e5c8a4;
-    --color: #265c31;
-    --mid: #849c83;
-    --light: #f9e8d1;
-    --milight: #E5E1E1;
-    --white: #FAF3F3;
-    --std: all 250ms ease-in-out;
-    --long: all 500ms ease-in-out;
-  }
+  --dark: #6b5b52;
+  --midark: #7b6c4f;
+  --dim: #e5c8a4;
+  --color: #265c31;
+  --mid: #5d6f5d;
+  --light: #f9e8d1;
+  --milight: #E5E1E1;
+  --white: #FAF3F3;
+  --std: all 250ms ease-in-out;
+  --long: all 500ms ease-in-out;
+}
   
   body {
     color: var(--mid);
