--- a/css/groups.css
+++ b/css/groups.css
@@ -23,7 +23,7 @@
   ------------------*/
   .topnav { 
     background-color: var(--dim);
-    padding: 1rem 4rem 1rem 2rem;
+    padding: 5rem 4rem 5rem 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -41,6 +41,8 @@
   a.logo {
     margin-right: auto;
     opacity: .85;
+    font-size: larger;
+    font-weight: 700;
   }
   a.logo:hover {
     opacity: 1;
