--- a/css/pagenotfound.css
+++ b/css/pagenotfound.css
@@ -10,78 +10,82 @@
   --std: all 250ms ease-in-out;
   --long: all 500ms ease-in-out;
 }
-  
-  body {
-    color: var(--mid);
-    height: 100%;
-    background-color: var(--milight);
-    margin: 0;
-  } 
 
-  main {
-    padding: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  /*------------------
-  --  Nav Styles  --
-  ------------------*/
-  .topnav { 
-    background-color: var(--dim);
-    padding: 1rem 4rem 1rem 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-    text-transform: uppercase;
-    font-weight: 500;
-  }
-  .site-footer {
-    background-color: var(--dim);
-    padding: 1em 4em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  a.logo {
-    margin-right: auto;
-    opacity: .85;
-  }
-  a.logo:hover {
-    opacity: 1;
-  }
-  a.logo > img {
-    width: 120px;
-    height: auto;
-  }
-  .topnav h1 {
-    text-align: center;
-  }
-  .topnav a {
-    text-decoration: none; 
-    color: var(--mid);
-    cursor: pointer;
-    transition: var(--std);
-  }
-  a:hover {
-    color: var(--light);
-    cursor: pointer; 
-  }
-  .nav-item.trigram {
-    display: none; /*-- hides trigram (hamburger menu button) by default --*/
-  }
-
-  figure img {
-    width: 500px;
-    height: auto;
-  }
-
-.home{
-  text-decoration: underline; 
+.topnav { 
+  background-color: var(--dim);
+  padding: 5rem 4rem 5rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.site-footer {
+  background-color: var(--dim);
+  padding: 1em 4em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+a.logo {
+  margin-right: auto;
+  opacity: .85;
+  font-size: larger;
+  font-weight: 700;
+}
+a.logo:hover {
+  opacity: 1;
+}
+a.logo > img {
+  width: 120px;
+  height: auto;
+}
+.topnav h1 {
+  text-align: center;
+}
+.topnav a {
+  text-decoration: none; 
   color: var(--mid);
   cursor: pointer;
   transition: var(--std);
+}
+a:hover {
+  color: var(--light);
+  cursor: pointer; 
+}
+.nav-item.trigram {
+  display: none; /*-- hides trigram (hamburger menu button) by default --*/
+}
+
+
+
+
+
+
+body {
+  color: var(--mid);
+  height: 100%;
+  background-color: var(--milight);
+  margin: 0;
+} 
+
+main {
+  padding: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+figure img {
+  width: 500px;
+  height: auto;
+}
+
+.home{
+text-decoration: underline; 
+color: var(--mid);
+cursor: pointer;
+transition: var(--std);
 }
